# test-map-ui-api

./: .gitignore  Cargo.toml  README.md
map-ui-adapter/: Cargo.toml
map-ui-adapter/src/: lib.rs  modules.rs
map-ui-adapter/src/clients/: mysql.rs
map-ui-adapter/src/models/: mod.rs
map-ui-adapter/src/models/data/: point.rs
map-ui-adapter/src/models/dto/: point.rs
map-ui-adapter/src/services/: mod.rs  point.rs
map-ui-app/: Cargo.toml
map-ui-app/src/models/: point.rs
map-ui-app/src/usecase/: point.rs
map-ui-driver/: Cargo.toml
map-ui-driver/src/: lib.rs
map-ui-driver/src/context/: axum_helper.rs  errors.rs  validate.rs
map-ui-driver/src/models/: point.rs
map-ui-driver/src/modules/: mod.rs
map-ui-driver/src/routes/: point.rs
map-ui-driver/src/settings/: config.rs
map-ui-driver/src/startup/: mod.rs
map-ui-kernel/: Cargo.toml
map-ui-kernel/src/models/: coordinate.rs
