[package]
name = "map-ui-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
map-ui-kernel = { path = "../map-ui-kernel" }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
] }
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["rt", "macros", "test-util"] }
async-trait = "0.1.80"
derive-new = "0.6.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
