[package]
name = "map-ui-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
map-ui-kernel = { path = "../map-ui-kernel" }
map-ui-adapter = { path = "../map-ui-adapter" }
derive-new = "0.6.0"
tokio = "1.37.0"
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.201", features = ["derive"] }
